--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<a href='/'>Home</a>
 
-<%= yield %>
+  <div id="navbar_container">
+    <div class="navbar">
+      <a href='/'>Home</a>
+      <% if current_user %>
+        Loggid in as <%= current_user.username %>
+        <%= link_to "Log Out", logout_path %>
+      <% else %>
+        <%= link_to "Sign Up", signup_path %> or
+        <%= link_to "Log In", login_path %>
+      <% end %>
+    </div> <!-- class=navbar -->
+  </div> <!-- id=navbar_container -->
+
+  <%= yield %>
 
 </body>
 </html>
