--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,14 +1,12 @@
-<h1>Albums#show</h1>
-
-<ul>
-  <%= @album.name %>
+<div id="albums_photos">
+  <h1>Album: <%= @album.name %></h1>
+  <p><%= link_to 'Add a Photo to This Album', new_album_photos_path(@album.id) %></p>
   <% @album.photos.each do |photo| %>
-  <li>
-    <%= link_to photo.name, album_photos_path(@album.id, photo.id) %>
+  <p>Photo:  <%= link_to photo.name, album_photos_path(@album.id, photo.id) %></p>
+  <div id="photos">
     <%= image_tag photo.url %>
-  </li>
+  </div> <!--photos -->
   <% end %>
-</ul>
+</div> <!-- albums_photos -->
 
-<%= link_to 'Add a Photo to This Album', new_album_photos_path(@album.id) %>
 
