updating user model for Stripe

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
       <p>
         For only $2.99 a month you can add unlimited albums for photo sharing and storage!
         <br>
-        <%= button_tag "Sign-Up Here!" %>
+        <%= link_to "Sign-Up Here!"  %>
       </p>
     </div>
   </div>
