--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
   <h1><%= @user.username %></h1>
 
-  <% if @albums.count < 2 %>
+  <% if @albums.count < 2 || @user.is_paid? %>
     <p id="add_album_link">
       <%= link_to 'Add an Album', new_album_path %>
     </p>
@@ -14,30 +14,37 @@
     <% end %>
 
   <br>
-  <hr>
-  <h3>Signup for a paid account:</h3>
-  <div id="account_options">
-    <div id="free_account">
-      <p>
-        Free! You already have signed up for this.  Two free albums.
-      </p>
-    </div>
-    <div id="paid_account">
-      <p>
-        For only $2.99 a month you can add unlimited albums for photo sharing and storage!
-      </p>
-        <br>
 
-        <%= form_tag charges_path do %>
-          <script
-            src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
-            data-key="pk_test_YdBv53fHLnm3VP1TxecxLsFQ"
-            data-amount="299"
-            data-name="Tom's Flickr"
-            data-description="Unlimited Albums for only $2.99/Month!">
-          </script>
-        <% end %>
+  <% if @user.is_paid? %>
+    <p id="thank_you_message">
+      Thank you for signing up for our monthly subscription. You now have access to create an unlimited amount of photo albums!!
+    </p>
+  <% else %>
+    <hr>
+    <h3>Signup for a paid account:</h3>
+    <div id="account_options">
+      <div id="free_account">
+        <p>
+          Free! You already have signed up for this.  Two free albums.
+        </p>
+      </div>
+      <div id="paid_account">
+        <p>
+          For only $2.99 a month you can add unlimited albums for photo sharing and storage!
+        </p>
+          <br>
+
+          <%= form_tag charges_path do %>
+            <script
+              src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
+              data-key="pk_test_YdBv53fHLnm3VP1TxecxLsFQ"
+              data-amount="299"
+              data-name="Tom's Flickr"
+              data-description="Unlimited Albums for only $2.99/Month!">
+            </script>
+          <% end %>
+      </div>
     </div>
-  </div>
+  <% end %>
 
 </div>
