--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -8,11 +8,34 @@
   <% end %>
 
   <% @album.photos.each do |photo| %>
-  <p>Photo:  <%= link_to photo.name, album_photos_path(@album.id, photo.id) %></p>
+  <p>Photo:  <%= photo.name %></p>
   <div id="photos">
     <%= image_tag photo.url %>
   </div> <!--photos -->
+
+    <div class="comments">
+      <% photo.comments.each do |comment| %>
+        <p class="comment">
+          "<%= comment.content %>"
+        </p>
+        <br>
+      <% end %>
+    </div>
+
+  <br>
+  <div class="comment_form_div">
+    <%= form_for "comment", :url => comments_path do |f| %>
+      <%= f.text_area :content, :class => "comments_form" %>
+      <%= f.hidden_field :author, :value => @user.id %>
+      <%= hidden_field_tag :photo_id, photo.id %>
+      <br>
+      <br>
+      <%= f.submit "Add Comment" %>
+    <% end %>
+  </div>
   <% end %>
 </div> <!-- albums_photos -->
+
+
 
 
