--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,29 @@
 
   <hr>
   <%  @albums.each do |album| %>
-    <li><%= link_to album.name, album_path(album.id) %></li>
+    <li>Album Name:  <%= link_to album.name, album_path(album.id) %></li>
+
+      <div class="comments">
+        <% album.comments.each do |comment| %>
+          <p class="comment">
+            "<%= comment.content %>"
+          </p>
+          <br>
+        <% end %>
+      </div>
+
+      <br>
+
+      <div class="comment_form_div">
+        <%= form_for "comment", :url => comments_path do |f| %>
+          <%= f.text_area :content, :class => "comments_form" %>
+          <%= f.hidden_field :author, :value => @user.id %>
+          <%= hidden_field_tag :album_id, album.id %>
+          <br>
+          <br>
+          <%= f.submit "Add Comment" %>
+        <% end %>
+      </div>
     <% end %>
 
   <br>
